syntax = "proto3";
package planet.mail;

option go_package = "planet/x/mail/types";

message TimedoutMessage {
  uint64 id = 1;
  string title = 2; 
  string chain = 3; 
  string creator = 4; 
  
}
